--- a/www/index.html
+++ b/www/index.html
@@ -25,14 +25,15 @@
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
         <meta name="msapplication-tap-highlight" content="no" />
-        <title>Hello World</title>
+        <title>¡Hola mundo!</title>
     </head>
     <body>
         <div class="app">
-            <h1>Apache Cordova</h1>
+            <h1>Hola mundo</h1>
+            <h4>Programación de dispositivos móviles</h4>
             <div id="deviceready" class="blink">
-                <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready</p>
+                <p class="event listening">Cargando</p>
+                <p class="event received">¡Listos para empezar!</p>
             </div>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
@@ -41,6 +42,5 @@
             app.initialize();
         </script>
         
-         <h1>Holaaaaaa</h1>
     </body>
 </html>
